--- a/components/go-dszwjuxf/overlays/development/deployment-patch.yaml
+++ b/components/go-dszwjuxf/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-dszwjuxf
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-dszwjuxf:860634fdc7d9ece35ceb7348c2a52e86cb70bdd0@sha256:b26ddbe0647c301aee23ad47b7e375116d169a3e3e3b714c5f91867c9cdd6311
+          name: container-image
